--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/react": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.6",
+    "@tanstack/react-virtual": "^3.13.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
